--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "button-component",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
@@ -39,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "vitest": "^2.1.7"
+  },
+  "description": "test task",
+  "main": "index.js",
+  "repository": "https://github.com/Suren4ik/test_task.git",
+  "author": "Egor Korolkov <jaguarkorr@gmail.com>",
+  "license": "MIT"
 }
