--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.121",
+    "@types/node": "18.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,7 +41,9 @@
     ]
   },
   "devDependencies": {
-    "vitest": "^2.1.7"
+    "vitest": "^latest_version",
+    "jsdom": "^latest_version",
+    "vite": "^latest_version"
   },
   "description": "test task",
   "main": "index.js",
